# Fani-Ippoliti

./: README.md
Deposito classi/: Bow.cpp  Bow.h  Dice.cpp  Dice.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Items.h  Mummy.cpp  Mummy.h  RangedWeapon.cpp  RangedWeapon.h  readme.md
Draghi e Sotterranei/: Archer.cpp  Archer.h  CMakeLists.txt  Dice.cpp  Dice.h  Enemy.cpp  Enemy.h  EvilMage.cpp  EvilMage.h  GameCharacter.cpp  GameCharacter.h  Hero.cpp  Hero.h  Mage.cpp  Mage.h  Orc.cpp  Orc.h  Skeleton.cpp  Skeleton.h  Troll.cpp  Troll.h  Warrior.cpp  Warrior.h  Weapon.cpp  Weapon.h  Zombie.cpp  Zombie.h
Draghi_e_Sotterranei - v0.1/: AnimationComponent.cpp  AnimationComponent.h  AttackStrategy.cpp  AttackStrategy.h  AttributeComponent.cpp  DefaultEditorMode.cpp  EditorMode.cpp  EditorMode.h  EditorModes.h  EditorState.cpp  EnemyEditorMode.cpp  EnemyStrategy.cpp  EnemyStrategy.h  GameCharacter.cpp  GameState.cpp  GameState.h  GraphicsSettings.h  Hero.cpp  HeroTabs.h  HitboxComponent.cpp  HitboxComponent.h  MeleeWeapon.h  MovementComponent.cpp  Observer.h  PauseMenu.cpp  PauseMenu.h  README.md  RegularTile.cpp  SkillComponent.h  Subject.h  Sword.cpp  Sword.h  Tab.h  TextTagSystem.cpp  Tile.h  TileMap.cpp  fragment_shader.frag  precompiler.h
Draghi_e_Sotterranei - v1.0/: Achievements.h  AttributeComponent.h  CMakeLists.txt  CharacterTab.cpp  CharacterTab.h  DefaultEditorMode.h  DistanceCalc.cpp  DistanceCalc.h  EditorState.h  Enemy.cpp  Enemy.h  EnemyEditorMode.h  EnemyFactory.cpp  EnemyFactory.h  EnemySpawnerTile.cpp  EnemySpawnerTile.h  Game.cpp  Game.h  Gui.cpp  (+30 more)
(+9 files in other folders)
