cmake_minimum_required(VERSION 3.16)
project(Draghi_e_Sotterranei)

set(CMAKE_CXX_STANDARD 20)

add_executable(Draghi_e_Sotterranei main.cpp Enemy.cpp Enemy.h GameCharacter.cpp GameCharacter.h Weapon.cpp Weapon.h Dice.cpp Dice.h Hero.cpp Hero.h Warrior.cpp Warrior.h Archer.cpp Archer.h Mage.cpp Mage.h Orc.cpp Orc.h Skeleton.cpp Skeleton.h Troll.cpp Troll.h EvilMage.cpp EvilMage.h Zombie.cpp Zombie.h)